--- a/trabalho.html
+++ b/trabalho.html
@@ -32,6 +32,7 @@
         <h4>iPhone</h4>
         <img src="img/06-iphone-can-do-what-2.gif" alt="" height="50%">
         <h5>Link</h5>
+        <p>Esse e o link do meu github</p>
         <a href="https://github.com/MadaraTr/novo-sitee"> Clique Aqui</a>
     </div>
     <div class="col"></div>
